# swc-bun

./: AGENTS.md  CLAUDE.md  Cargo.toml  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup-bun/: action.yml
.github/actions/tag-git-release/: action.yml
.github/bot/: package.json
.github/bot/src/: milestone-manager.ts  nightly-version.ts
.github/swc-ecosystem-ci/: package.json  utils.ts
.github/workflows/: CI.yml  binary-size.yml  devbird.yml  ecosystem-ci.yml  publish-crates.yml  publish-npm-package.yml  publish.yml
bindings/binding_core_node/: Cargo.toml  build.rs
bindings/binding_core_node/src/: bundle.rs
bindings/binding_core_wasm/: Cargo.toml  package.json
bindings/binding_core_wasm/example/: package.json
bindings/binding_core_wasm/scripts/: test.sh
bindings/binding_es_ast_viewer/: Cargo.toml  package.json
bindings/binding_es_ast_viewer/scripts/: build.sh  package.mjs  test.sh
bindings/binding_html_node/: Cargo.toml
bindings/binding_minifier_node/: Cargo.toml
bindings/binding_minifier_wasm/: Cargo.toml  package.json
bindings/binding_react_compiler_node/: Cargo.toml
bindings/binding_typescript_wasm/: Cargo.toml  package.json
bindings/binding_typescript_wasm/scripts/: build.sh  esm.mjs  esm.sh  patch.mjs  test.sh
bindings/binding_typescript_wasm/src/: error_reporter.rs  lib.rs  wasm-node.js
crates/ast_node/src/: enum_deserialize.rs  spanned.rs
crates/binding_macros/src/: wasm.rs
crates/dbg-swc/: Cargo.toml
crates/dbg-swc/src/: bundle.rs  main.rs
crates/hstr/: Cargo.toml
crates/hstr/benches/: libs.rs
crates/hstr/src/: dynamic.rs  global_store.rs  lib.rs  tagged_value.rs  tests.rs  wtf8_atom.rs
crates/jsdoc/src/: ast.rs  input.rs  lib.rs
crates/jsdoc/tests/: fixture.rs
crates/preset_env_base/src/: query.rs  version.rs
crates/swc/benches/: bugs.rs  isolated_declarations.rs  minify.rs  oxc.rs  typescript.rs
crates/swc/examples/: hygiene_visualizer.rs  minify.rs  transform.rs  transform_error.rs
crates/swc/src/: builder.rs  dropped_comments_preserver.rs  lib.rs  plugin.rs  wasm_analysis.rs
crates/swc/tests/: error_msg.rs  exec.rs  projects.rs  rust_api.rs  serde.rs  simple.rs  source_map.rs  tsc.rs
crates/swc_allocator/: Cargo.toml
crates/swc_allocator/benches/: bench.rs
crates/swc_allocator/src/: lib.rs  util.rs
crates/swc_allocator/tests/: alloction.rs
crates/swc_atoms/src/: fast.rs  lib.rs  wtf8_atom.rs
crates/swc_bundler/examples/: bundle.rs  path.rs
crates/swc_bundler/src/: dep_graph.rs  hash.rs  id.rs  inline.rs  load.rs  util.rs
crates/swc_bundler/tests/: deno.rs  fixture.rs
crates/swc_cli_impl/: Cargo.toml
crates/swc_common/src/: cache.rs  comments.rs  input.rs  lib.rs  pos.rs  syntax_pos.rs
crates/swc_common/tests/: attr_interop.rs  concurrent.rs
crates/swc_compiler_base/src/: lib.rs
crates/swc_config/src/: is_module.rs  source_map.rs
crates/swc_config_macro/src/: merge.rs
crates/swc_core/: Cargo.toml  build.rs
crates/swc_core/tests/: integration.rs
crates/swc_css_ast/src/: at_rule.rs  base.rs  selector.rs  token.rs  value.rs
crates/swc_css_codegen/src/: ctx.rs  lib.rs
crates/swc_css_codegen/tests/: fixture.rs
crates/swc_css_codegen_macros/src/: lib.rs
crates/swc_css_compat/tests/: fixture.rs
crates/swc_css_lints/src/: config.rs  lib.rs  rule.rs
crates/swc_css_lints/tests/: lints.rs
crates/swc_css_minifier/tests/: fixture.rs
crates/swc_css_modules/src/: lib.rs
crates/swc_css_modules/tests/: fixture.rs  with_compat.rs
crates/swc_css_parser/benches/: compare.rs  lexer.rs  parser.rs
crates/swc_css_parser/src/: error.rs  lib.rs
crates/swc_css_parser/tests/: fixture.rs
crates/swc_css_prefixer/src/: prefixer.rs
crates/swc_css_prefixer/tests/: prefixer.rs
crates/swc_css_utils/src/: lib.rs
crates/swc_ecma_ast/src/: class.rs  decl.rs  expr.rs  function.rs  ident.rs  jsx.rs  lib.rs  lit.rs  module.rs  module_decl.rs  pat.rs  prop.rs  stmt.rs  typescript.rs
crates/swc_ecma_ast/tests/: lit.rs
crates/swc_ecma_codegen/benches/: bench.rs  with_parse.rs
crates/swc_ecma_codegen/examples/: gen.rs  sourcemap.rs
crates/swc_ecma_codegen/src/: class.rs  lib.rs  lit.rs  macros.rs  module_decls.rs  object.rs  pat.rs  stmt.rs  tests.rs  util.rs
crates/swc_ecma_codegen/tests/: fixture.rs  sourcemap.rs  test262.rs
crates/swc_ecma_compat_bugfixes/src/: async_arrows_in_class.rs  edge_default_param.rs  safari_id_destructuring_collision_in_function_expression.rs  template_literal_caching.rs
crates/swc_ecma_compat_es2015/src/: arrow.rs  block_scoped_fn.rs  computed_props.rs  destructuring.rs  for_of.rs  generator.rs  lib.rs  new_target.rs  object_super.rs  parameters.rs  spread.rs  template_literal.rs
crates/swc_ecma_compat_es2022/src/: optional_chaining_impl.rs
crates/swc_ecma_compat_regexp/: Cargo.toml
crates/swc_ecma_ext_transforms/src/: jest.rs
crates/swc_ecma_hooks/tests/: compose.rs
crates/swc_ecma_lexer/: Cargo.toml
crates/swc_ecma_lexer/examples/: lexer.rs
crates/swc_ecma_lexer/src/: input.rs  lib.rs  token.rs
crates/swc_ecma_lints/benches/: all.rs
crates/swc_ecma_lints/examples/: all.rs
crates/swc_ecma_lints/src/: config.rs  rule.rs
crates/swc_ecma_lints/tests/: fixture.rs
crates/swc_ecma_loader/: Cargo.toml
crates/swc_ecma_loader/src/: resolve.rs
crates/swc_ecma_loader/tests/: node_resolver.rs  tsc_resolver.rs
crates/swc_ecma_minifier/benches/: full.rs
crates/swc_ecma_minifier/examples/: compress.rs  minifier.rs  minify-all.rs
crates/swc_ecma_minifier/fuzz/: Cargo.toml
crates/swc_ecma_parser/: Cargo.toml
crates/swc_ecma_regexp_ast/: Cargo.toml
crates/swc_ecma_transforms_base/: Cargo.toml
crates/swc_ecma_utils/: Cargo.toml
crates/swc_estree_compat/: Cargo.toml
crates/swc_malloc/: Cargo.toml
crates/swc_node_bundler/: Cargo.toml
crates/swc_plugin_backend_tests/: Cargo.toml
crates/swc_plugin_backend_wasmer/: Cargo.toml
scripts/: link.sh  patch-project.sh  publish.sh  setup-env.sh  test.sh
tools/generate-code/: Cargo.toml
tools/swc-releaser/: Cargo.toml
xtask/: Cargo.toml
(+503 files in other folders)
