[workspace]
members = [
  "xtask",
  "bindings/*",
  "crates/*",
  "tools/generate-code",
  "tools/swc-releaser",
]
resolver = "3"

[workspace.package]
edition    = "2024"
license    = "Apache-2.0"
repository = "https://github.com/swc-project/swc.git"


[workspace.dependencies]
# bytecheck version should be in sync with rkyv version. Do not bump individually.
bytecheck = "0.8.2"
rancor    = "0.1.1"
rkyv      = "0.8.15"


Inflector                 = "0.11.4"
allocator-api2            = "0.4.0"
ansi_term                 = "0.12.1"
anyhow                    = "1.0.101"
arbitrary                 = "1"
arrayvec                  = "0.7.6"
ascii                     = "1.1.0"
assert_cmd                = "2.1.2"
assert_fs                 = "1.1.3"
auto_impl                 = "1.3.0"
backtrace                 = "0.3"
base64                    = "0.22.1"
bitflags                  = "2.10.0"
blake3                    = "1.8.3"
browserslist-rs           = "0.19.0"
bumpalo                   = { version = "3.19.1", features = ["allocator-api2"] }
bytes-str                 = "0.2.7"
cargo_metadata            = "0.23.1"
changesets                = "0.4.0"
chrono                    = "0.4.43"
codspeed-criterion-compat = "4.3.0"
compact_str               = "0.9.0"
console_error_panic_hook  = "0.1.7"
copyless                  = "0.1.5"
crc                       = "3.4.0"
criterion                 = "0.8.2"
dashmap                   = "6.1.0"
dialoguer                 = "0.12.0"
difference                = "2"
dragonbox_ecma            = "0.1.12"
either                    = "1.15.0"
enumset                   = "1.1.10"
flate2                    = "1.1"
getrandom                 = "0.4.1"
glob                      = "0.3.3"
globset                   = { version = "0.4.18", default-features = false }
hashbrown                 = "0.16.1"
hex                       = "0.4.3"
humansize                 = "2.1.3"
indexmap                  = "2.13.0"
is-macro                  = "0.3.7"
js-sys                    = "0.3.85"
jsonc-parser              = "0.29.0"
kstring                   = "2.0.2"
lazy_static               = "1.5.0"
lexical                   = "7.0.5"
lightningcss              = "1.0.0-alpha.70"
lru                       = "0.16.3"
memchr                    = "2.8.0"
miette                    = "7.6.0"
napi                      = { version = "3", default-features = false }
napi-build                = "2"
napi-derive               = { version = "3", default-features = false }
new_debug_unreachable     = "1.0.6"
nom                       = "8.0.0"
ntest                     = "0.9.5"
num-bigint                = "0.4.6"
num_cpus                  = "1.17.0"
once_cell                 = "1.21.3"
owo-colors                = "4.2.3"
par-core                  = { version = "2.0.0", default-features = false }
par-iter                  = "2.0.0"
parking_lot               = "0.12.5"
path-absolutize           = "3.1.1"
path-clean                = "1.0"
pathdiff                  = "0.2.3"
petgraph                  = "0.8.3"
phf                       = "0.13.1"
pretty_assertions         = "1.4"
proc-macro2               = "1.0.106"
quote                     = "1.0.44"
radix_fmt                 = "1.0.0"
rand                      = "0.10.0"
rayon                     = "1.11.0"
regex                     = "1.12.3"
regress                   = "0.10.5"
relative-path             = "2.0.1"
reqwest                   = "0.13.2"
rustc-hash                = "2"
ryu-js                    = "1.0.2"
scoped-tls                = "1.0.1"
semver                    = "1.0.27"
seq-macro                 = "0.3"
serde                     = "1.0.228"
serde-wasm-bindgen        = "0.6.5"
serde_derive              = "1.0.228"
serde_json                = "1.0.149"
sha1                      = "0.10.6"
sha2                      = "0.10.9"
shrink-to-fit             = "0.2.10"
siphasher                 = "1.0.2"
smallvec                  = "1.15.1"
smartstring               = "1.0.1"
smol_str                  = "0.3.5"
st-map                    = "0.2.4"
string_cache              = "0.9.0"
swc_sourcemap             = "9.3.4"
syn                       = "2"
tempfile                  = "3.25.0"
termcolor                 = "1.4"
thiserror                 = "2.0.18"
tokio                     = { version = "1", default-features = false }
toml                      = "0.9.11"
tracing                   = "0.1.44"
tracing-chrome            = "0.7.2"
tracing-subscriber        = "0.3.22"
triomphe                  = "0.1.15"
unicode-id-start          = "1.4.0"
unicode-width             = "0.2.2"
url                       = "2.5.8"
vergen                    = { version = "9.1.0", default-features = false }
walkdir                   = "2.5.0"
wasi-common               = { version = "41", default-features = false }
wasm-bindgen              = "0.2.108"
wasm-bindgen-futures      = "0.4.58"
wasmer                    = { version = "7.0.1", default-features = false }
wasmer-wasix              = { version = "0.700.1", default-features = false }
wasmtime                  = { version = "41", default-features = false }


cbor4ii         = "1.2"
foldhash        = "0.2"
precomputed-map = "0.2"

[workspace.metadata.cargo-shear]
# `serde` is used when #[ast_node] is expanded
# the rests are used for enabling features
ignored = [
  "par-core",
  "serde",
  "napi",
  "napi-derive",
  "indexmap",
  "tracing",
  "num-bigint",
  "swc_ecma_utils",
  "swc_ecma_transforms_base",
  "getrandom",
]

[profile.release]
lto = "fat"

# debug = true
# opt-level = 'z'

# Strip debug symbols
strip = "symbols"

# Reduce binary size
codegen-units = 1

# Abort on panic to remove unwinding code
panic = "abort"

[profile.bench]
debug = true
lto   = true

# Optimize for iteration
[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3


[profile.test.package.swc_ecma_minifier]
opt-level = 3

[profile.test.package.swc_ecma_transforms_optimization]
opt-level = 3

[profile.test.package.swc_ecma_usage_analyzer]
opt-level = 3


[profile.release.package]

[profile.release.package.wasmer-wasix]
opt-level = "s"

[profile.release.package.cranelift-codegen]
opt-level = "s"

[profile.release.package.swc_ecma_minifier]
opt-level = 3

[profile.release.package.swc]
opt-level = 3

[profile.release.package.swc_ecma_compat_es2015]
opt-level = "s"

[profile.release.package.swc_ecma_parser]
opt-level = 3

[patch.crates-io]
par-core = { path = "vendor/par-core-2.0.0" }
regalloc2 = { path = "vendor/regalloc2-0.13.5" }
wasmer = { path = "vendor/wasmer-7.0.1" }
wasmer-wasix = { path = "vendor/wasmer-wasix-0.700.1" }

[profile.release.package.wast]
opt-level = "s"

[profile.release.package.wasmparser]
opt-level = "s"

[profile.release.package.browserslist-rs]
opt-level = "s"

[profile.release.package.swc_ecma_transforms_module]
opt-level = "s"

[profile.release.package.swc_ecma_transforms_proposal]
opt-level = "s"

[profile.release.package.swc_ecma_transforms_optimization]
opt-level = 3

[profile.release.package.swc_ecma_ast]
opt-level = 3

[profile.release.package.swc_ecma_transforms_base]
opt-level = 3

[profile.release.package.webc]
opt-level = "s"

[profile.release.package.swc_ecma_compat_es2022]
opt-level = "s"

[profile.release.package.regex-automata]
opt-level = "s"

[profile.release.package.swc_ecma_transforms_typescript]
opt-level = 3

[profile.release.package.clap]
opt-level = "s"

[profile.release.package.swc_cli_impl]
opt-level = "s"

# ICU and internationalization crates (not performance critical)
[profile.release.package.zerovec]
opt-level = "s"

[profile.release.package.icu_locid]
opt-level = "s"

[profile.release.package.icu_properties]
opt-level = "s"

[profile.release.package.icu_normalizer]
opt-level = "s"

[profile.release.package.icu_provider]
opt-level = "s"

[profile.release.package.icu_collections]
opt-level = "s"

[profile.release.package.icu_locid_transform]
opt-level = "s"

[profile.release.package.swc_ecma_visit]
opt-level = "s"

[profile.release.package.swc_sourcemap]
opt-level = "s"

[profile.release.package.wasmer-config]
opt-level = "s"

[profile.release.package.swc_ecma_utils]
opt-level = 3

[profile.release.package.wasmer-compiler]
opt-level = "s"

[profile.release.package.wasmer]
opt-level = "s"

[profile.release.package.wasmer-vm]
opt-level = "s"

[profile.release.package.wasmer-compiler-cranelift]
opt-level = "s"

[profile.release.package.regalloc2]
opt-level = "s"

[profile.release.package.swc_plugin_backend_wasmer]
opt-level = "s"

[profile.release.package.swc_plugin_runner]
opt-level = "s"

[profile.release.package.globset]
opt-level = "s"

[profile.release.package.toml_edit]
opt-level = "s"

[profile.release.package.miette]
opt-level = "s"

[profile.release.package.swc_bundler]
opt-level = "s"

[profile.release.package.swc_ecma_compat_es3]
opt-level = "s"

[profile.release.package.serde]
opt-level = "s"

[profile.release.package.regex-syntax]
opt-level = "s"

[profile.release.package.virtual-fs]
opt-level = "s"

[profile.release.package.swc_typescript]
opt-level = "s"

[profile.release.package.wasmer-package]
opt-level = "s"

[profile.release.package.aho-corasick]
opt-level = "s"

[profile.release.package.backtrace]
opt-level = "s"

[profile.release.package.tokio]
opt-level = "s"

[profile.release.package.napi]
opt-level = "s"
